log
Thu 28 Mar 2024 02:36:42 PM UTC: 
 tests:  0|6
total_score: 0/70
54bb2ca
Thu 28 Mar 2024 02:45:48 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c75d575
Thu 28 Mar 2024 02:48:34 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
0b9541f
Thu 28 Mar 2024 02:50:30 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:57: error: expected expression before ‘>’ token
   50 |   if (list == NULL || list->current == NULL || list-    >current->next == NULL)
      |                                                         ^
Compilation failed
2b3b162
